add swagger docs for comment endpoints in mygram.
