# MyGram/docs/swagger.yaml
@@ -1,5 +1,23 @@
 basePath: /
 definitions:
+  dto.Comment:
+    properties:
+      message:
+        type: string
+      photo_id:
+        example: 1
+        type: integer
+    required:
+    - message
+    - photo_id
+    type: object
+  dto.CommentMessage:
+    properties:
+      message:
+        type: string
+    required:
+    - message
+    type: object
   dto.Photo:
     properties:
       caption:
@@ -55,6 +73,65 @@ definitions:
     - email
     - username
     type: object
+  models.Comment:
+    properties:
+      created_at:
+        example: "2019-11-09T21:21:46+00:00"
+        type: string
+      id:
+        example: 1
+        type: integer
+      message:
+        type: string
+      photo_id:
+        example: 1
+        type: integer
+      updated_at:
+        example: "2019-11-09T21:21:46+00:00"
+        type: string
+      user_id:
+        example: 1
+        type: integer
+    type: object
+  models.Photo:
+    properties:
+      caption:
+        type: string
+      created_at:
+        example: "2019-11-09T21:21:46+00:00"
+        type: string
+      id:
+        example: 1
+        type: integer
+      photo_url:
+        example: https://subdomain.domain.dom.ge/path?arg=1
+        type: string
+      title:
+        type: string
+      updated_at:
+        example: "2019-11-09T21:21:46+00:00"
+        type: string
+      user_id:
+        example: 1
+        type: integer
+    type: object
+  responses.CreateComment:
+    properties:
+      created_at:
+        example: "2019-11-09T21:21:46+00:00"
+        type: string
+      id:
+        example: 1
+        type: integer
+      message:
+        type: string
+      photo_id:
+        example: 1
+        type: integer
+      user_id:
+        example: 1
+        type: integer
+    type: object
   responses.CreatePhoto:
     properties:
       caption:
@@ -78,6 +155,30 @@ definitions:
     properties:
       error_message:
         type: string
+    type: object
+  responses.GetComment:
+    properties:
+      created_at:
+        example: "2019-11-09T21:21:46+00:00"
+        type: string
+      id:
+        example: 1
+        type: integer
+      message:
+        type: string
+      photo:
+        $ref: '#/definitions/models.Photo'
+      photo_id:
+        example: 1
+        type: integer
+      updated_at:
+        example: "2019-11-09T21:21:46+00:00"
+        type: string
+      user:
+        $ref: '#/definitions/responses.UserComment'
+      user_id:
+        example: 1
+        type: integer
     type: object
   responses.GetPhoto:
     properties:
@@ -126,6 +227,17 @@ definitions:
       user_id:
         example: 1
         type: integer
+    type: object
+  responses.UserComment:
+    properties:
+      email:
+        example: name@org.dom.ge
+        type: string
+      id:
+        example: 1
+        type: integer
+      username:
+        type: string
     type: object
   responses.UserLogin:
     properties:
@@ -176,6 +288,139 @@ info:
   title: MyGram API
   version: "1.0"
 paths:
+  /comments:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a comment associated with logged in user.
+      parameters:
+      - description: ID number of the comment to be deleted
+        in: path
+        name: commentId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.Message'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: Delete a comment
+      tags:
+      - comments
+    get:
+      consumes:
+      - application/json
+      description: Get comments.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/responses.GetComment'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: Get comments
+      tags:
+      - comments
+    post:
+      consumes:
+      - application/json
+      description: Create a Comment associated with the logged in user.
+      parameters:
+      - description: JSON of the comment to be made. Caption is not mandatory.
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.Comment'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/responses.CreateComment'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: Create a Comment
+      tags:
+      - comments
+  /comments/{commentId}:
+    put:
+      consumes:
+      - application/json
+      description: Update a comment associated with logged in user.
+      parameters:
+      - description: ID number of the comment
+        in: path
+        name: commentId
+        required: true
+        type: integer
+      - description: New JSON of the comment.
+        in: body
+        name: comment
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CommentMessage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Comment'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: Update a comment
+      tags:
+      - comments
   /photos:
     delete:
       consumes:
@@ -226,6 +471,10 @@ paths:
             items:
               $ref: '#/definitions/responses.GetPhoto'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorMessage'
         "500":
           description: Internal Server Error
       security:
@@ -276,7 +525,7 @@ paths:
         type: integer
       - description: New JSON of the photo.
         in: body
-        name: user
+        name: photo
         required: true
         schema:
           $ref: '#/definitions/dto.Photo'
